@@ -14,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,11 +44,11 @@ public class ActivityService {
     }
 
 
-    public List<ActivityResponse> getUserActivities() {
-        return activityRepository.findAll()
-                .stream()
-                .map(this::mapToResponse)
-                .toList();
+    public List<ActivityResponse> getUserActivities(String userid) {
+        List<Activity> activityList = activityRepository.findByUserId(userid);
+        return activityList.stream().map(this::mapToResponse).collect(Collectors.toList()
+        );
+
     }
 
     private ActivityResponse mapToResponse(Activity activity) {
